--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,10 @@
-node('docker'){
+node(){
     stage('checkout'){
         checkout scm
     }
     stage('Build'){
         docker.image('devrajadhikari333/practice-devops123:tagname').inside(){
-            sh "node --version"
+            sh "httpd --version"
         }
     }
 }
