--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,8 +3,10 @@ node(){
         checkout scm
     }
     stage('Build'){
-        docker.image('devrajadhikari333/practice-devops123:tagname').inside(){
-            sh "httpd --version"
+        withDockerRegistry(credentialsId: 'devraj-docker') {
+            docker.image('devrajadhikari333/practice-devops123:tagname').inside(){
+                sh "httpd --version"
+            }
         }
     }
 }
