--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ node{
             sh "docker build -t httpd:v1 -f dockerfile ."
             sh "docker run -p 8081:80 -d httpd:v1"
         }catch(err){
-        sh "error occured"
+        sh "echo error occured"
         }
     }
 }
